# Kaedra

./: .gcloudignore  .gitignore  A2A_IMPLEMENTATION.md  CLOUD_DEPLOYMENT.md  DEPLOYMENT_STATUS.md  Dockerfile  ENHANCED_MEMORY_ARCHITECTURE.md  FREE_TOOLS_INTEGRATION.md  KAEDRA_INTEGRATION_ARCHITECTURE.md  KAEDRA_NOTION_CAPABILITIES.md  Launch_Kaedra_v006_py314.bat  Launch_WSL.sh  NOTION_WORKSPACE_MAP.md  QUICKSTART.md  README.md  STORAGE_STATUS.md  audio_devices.txt  call_031138.txt  call_031556.txt  call_032435.txt  call_034920.txt  call_035532.txt  call_040411.txt  call_mode.py  call_transcript_20251230_024911.txt  chatterbox_speak.py  check_pipecat.py  cloudbuild.yaml  comprehensive_stress_test.py  debug_notion_access.py  debug_notion_client.py  debug_notion_dbs.py  debug_notion_raw.py  debug_properties_final.py  debug_startup.py  deploy.bat  deploy_cloud_run.sh  deploy_reasoning_engine.py  extract_voice_clip.py  find_browser_audio.py  (+42 more)
docs/: A2A_IMPLEMENTATION.md  BATCH_FILES.md  CAPABILITIES.md  CREDIT_STRATEGY.md  GOOGLE_API_SETUP.md
exports/: json_capture_20260101_092304.json  json_capture_20260101_095739.json
kaedra/: __init__.py  __main__.py  ingestion.py
legacy/: auto_flow.py  listen_and_speak.py  long_flow.py  universe_builder.py  universe_text.py
lore/: .message_queue.json  atlantis_bible.json  canon_delta.json  canon_spine.md  mars_ancient_secrets.md  mars_context.md  mars_mission_reality.md  mars_robotics_and_risks.md  narrative_doctrine.md  nyx_safehouse.md  session_monitor_20260101.md  studiobinder_links.txt  universe_spine.md  veil_verse_entities.md
(+493 files in other folders)
